fix(specifications-list): collapse only specs with multiple urls (#419)
* fix(specifications-list): collapse only specs with multiple urls

* enhance(content-section): align collapsed with regular item

* chore(content-section): style spec list summary

--- a/components/content-section/server.css
+++ b/components/content-section/server.css
@@ -270,6 +270,60 @@
     }
   }
 
+  ul.specifications-list {
+    li:has(details) {
+      margin-left: -1.25rem;
+      list-style: none;
+    }
+
+    details {
+      width: 100%;
+
+      &[open] {
+        > summary {
+          margin-bottom: 0.5rem;
+
+          &::before {
+            transform: rotate(90deg);
+          }
+        }
+      }
+
+      summary {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        &::before {
+          display: inline-block;
+
+          flex-shrink: 0;
+
+          width: 1rem;
+          height: 1rem;
+
+          margin: 0.125rem;
+
+          content: "";
+
+          background-color: currentcolor;
+
+          mask-image: url("../icon/chevron-right.svg");
+          mask-size: cover;
+        }
+
+        &:hover {
+          background-color: var(--color-background-secondary);
+
+          &:has(a:hover) {
+            /* Don't highlight, as link click doesn't toggle. */
+            background-color: unset;
+          }
+        }
+      }
+    }
+  }
+
   /* Article footer */
   &.article-footer {
     margin: 2rem 0;
